# EBGeometry

./: .buildinfo  .clang-format  .clang-tidy  .codespellignore  .gitignore  .gitmodules  .pre-commit-config.yaml  BVH.html  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Concepts.html  Copyright.txt  DCEL.html  EBGeometry.hpp  Example_AMReX.html  Example_Basic.html  Example_Chombo3.html  Example_Union.html  Examples.html  ImplemBVH.html  ImplemCSG.html  ImplemDCEL.html  ImplemOctree.html  ImplemSDF.html  ImplemUnion.html  ImplemVec.html  Implementation.html  Introduction.html  NOTES-particle-soa.md  Parsers.html  README.md  REUSE.toml  TODO.md  ZZReferences.html  build-tests-check.sh  clang-tidy-check.sh  doxyfile  genindex.html  index.html  (+3 more)
Dev/ClosestPointSFCPacked/: CMakeLists.txt  README.md  main.cpp
Examples/: CMakeLists.txt  README.md
Examples/AMReX/: Make.package  README.md  example.cpp  main.cpp
Examples/AMReX_DCEL/: GNUmakefile  README.md  main.cpp
Examples/AMReX_F18/: GNUmakefile  README.md  main.cpp
Examples/AMReX_MeshSDF/: README.md  main.cpp
Examples/AMReX_PackedSpheres/: README.md  main.cpp
Examples/AMReX_PaintEB/: README.md  main.cpp
Examples/AMReX_RandomCity/: README.md  main.cpp
Examples/AMReX_Shapes/: README.md  main.cpp
Examples/Airfoil/: example.cpp
Examples/Armadillo/: example.cpp
Examples/Basic/: README.md  main.cpp
Examples/BuildBVH/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/CSGUnion/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/Chombo3_DCEL/: README.md  examples.inputs  main.cpp
Examples/Chombo3_F18/: README.md  main.cpp
Examples/Chombo3_PackedSpheres/: GNUmakefile  README.md  examples.inputs  main.cpp
Examples/Chombo3_RandomCity/: README.md  examples.inputs  main.cpp
Examples/Chombo3_Shapes/: .#README.md  README.md  examples.inputs  main.cpp
Examples/ClosestPoint/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/ClosestPointBVH/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/ClosestPointPacked/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/ClosestPointSFC/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/ClosestPointSFCPacked/: GNUmakefile  README.md  main.cpp
Examples/ClosestPointTreePacked/: README.md  main.cpp
Examples/Data/: README.md
Examples/EBGeometry_CSGUnion/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/EBGeometry_DCEL/: CMakeLists.txt  README.md  a.out_O3  a.out_fm  a.out_scalar_soa  check_leaves  check_leaves.cpp  compile_log.txt  main.cpp
Examples/EBGeometry_F18/: README.md  growler2 - growler.step-1 EA-18G Growler-0.step-1.STL  growler2 - growler.step-1 EA-18G Growler-1.step-1.STL  growler2 - growler.step-1 EA-18G Growler-11.step-1.STL  growler2 - growler.step-1 EA-18G Growler-12.step-1.STL  growler2 - growler.step-1 EA-18G Growler-15.step-1.STL  growler2 - growler.step-1 EA-18G Growler-16.step-1.STL  growler2 - growler.step-1 EA-18G Growler-2.step-1.STL  growler2 - growler.step-1 EA-18G Growler-20.step-1.STL  growler2 - growler.step-1 EA-18G Growler-21.step-1.STL  growler2 - growler.step-1 EA-18G Growler-22.step-1.STL  growler2 - growler.step-1 EA-18G Growler-29.step-1.STL  growler2 - growler.step-1 EA-18G Growler-30.step-1.STL  growler2 - growler.step-1 EA-18G Growler-31.step-1.STL  growler2 - growler.step-1 EA-18G Growler-35.step-1.STL  growler2 - growler.step-1 EA-18G Growler-36.step-1.STL  growler2 - growler.step-1 EA-18G Growler-37.step-1.STL  growler2 - growler.step-1 EA-18G Growler-44.step-1.STL  growler2 - growler.step-1 EA-18G Growler-50.step-1.STL  growler2 - growler.step-1 EA-18G Growler-51.step-1.STL  growler2 - growler.step-1 EA-18G Growler-52.step-1.STL  growler2 - growler.step-1 EA-18G Growler-53.step-1.STL  growler2 - growler.step-1 EA-18G Growler-57.step-1.STL  growler2 - growler.step-1 EA-18G Growler-61.step-1.STL  growler2 - growler.step-1 EA-18G Growler-65.step-1.STL  growler2 - growler.step-1 EA-18G Growler-67.step-1.STL  growler2 - growler.step-1 EA-18G Growler-8.step-1.STL  growler2 - growler.step-1 EA-18G Growler-9.step-1.STL  growler2 - growler.step-1 EA-18G Growler.step-1.STL  main.cpp
Examples/EBGeometry_MeshSDF/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/EBGeometry_OctreeBoundingVolume/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/EBGeometry_PackedSpheres/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/EBGeometry_RandomCity/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/EBGeometry_Shapes/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/EBGeometry_Union/: main.cpp
Examples/MeshSDF/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/NearestNeighbor/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/NearestNeighborBVH/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/NearestNeighborHashGrid/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/NearestNeighborSFCPacked/: README.md  main.cpp
Examples/NearestNeighborTreePacked/: CMakeLists.txt  README.md  main.cpp
Examples/NestedBVH/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/Objects/: README.md  airfoil.stl  dodecahedron.ply  dodecahedron.stl  porsche.ply  porsche.stl
Examples/Octree/: main.cpp
Examples/OctreeBoundingVolume/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
Examples/PLY/: README.md  porsche.ply
Examples/PackedSpheres/: CMakeLists.txt  README.md  (+2 more)
Tests/: CMakeLists.txt  InstantiateAll.cpp  TestAnalyticSDF.cpp  TestBVH.cpp  TestBoundingVolumes.cpp  TestCSG.cpp  TestDCEL.cpp  TestDeath.hpp  TestFloatingPointUtils.hpp  TestGPU.hpp  TestMemoryResource.cpp  TestOBJ.cpp  TestOctree.cpp  TestPLY.cpp  TestPODVector.cpp  TestPackedBVHBuild.cpp  TestPoint.cpp  TestPointAoSoA.cpp  TestPointCloudBVH.cpp  TestPointCloudHashGrid.cpp  TestPointSoA.cpp  TestPolygon2D.cpp  TestPool.cpp  TestPoolRebase.cpp  TestRadixSort.cpp  TestRandom.cpp  TestSFC.cpp  TestSTL.cpp  TestSimpleTimer.cpp  TestTape.cpp  TestTransform.cpp  TestTriangle.cpp  TestTriangleSoA.cpp  TestVTK.cpp  TestVec.cpp
(+2541 files in other folders)
